# snake_rl

./: .gitignore  DQN_FIXES.md  README.md  pyproject.toml  report.md  report_final.md
src/snake_rl/: __init__.py  config.py  reporting.py
src/snake_rl/agents/: __init__.py  base.py  dqn_agent.py  q_learning_agent.py  random_agent.py  state_utils.py
src/snake_rl/environment/: snake_env.py
src/snake_rl/scripts/: generate_report.py  play_demo.py  run_dqn.py  run_q_learning.py  run_random.py
src/snake_rl/training/: __init__.py  runner.py
tests/: test_dqn_reporting_demo.py  test_improvements.py
