[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snake-rl"
version = "0.1.0"
description = "Comparative reinforcement learning experiments for Snake"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
torch = ["torch>=2.2"]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
